[project]
name = "python-hll2"
version = "1.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
]
description = "A Python implementation of HyperLogLog. Maintained fork from python-hll"
authors = [
            "Jon Aquino <jonathan.aquino@adroll.com>",
            "Kushagra Verma <kushagra.verma@adroll.com>",
            "Alex Leu <alex.leu@adroll.com>",
            "Michael Tran <michael.tran@adroll.com>",
            "Rodrigo Westrupp <rodrigo.westrupp@adroll.com>",
            "Sridharan Subramanian <sridharan.subramanian@adroll.com>",
            "Piyush Srivastava <piyush.srivastava@adroll.com>"]
maintainers = ["Jonathan Schaeffer <jonathan.schaeffer@univ-grenoble-alpes.fr>",]
license = "MIT"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
  "ANN", # Any-type
  "COM812", # Missing-trailing-comma
  "D",      # Docstrings stuff. Ignore for now
  "ISC001", # As demanded by ruff format
]
output-format = "concise"
